src/test/ui/consts/const-match-pattern-arm.stderr
error[E0744]: `match` is not allowed in a `const`
  --> $DIR/const-match-pattern-arm.rs:3:17
   |
LL |   const x: bool = match Some(true) {
   |  _________________^
LL | |     Some(value) => true,
LL | |     _ => false
LL | | };
   | |_^

error[E0744]: `match` is not allowed in a `const`
  --> $DIR/const-match-pattern-arm.rs:9:5
   |
LL | /     match Some(true) {
LL | |         Some(value) => true,
LL | |         _ => false
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0744`.
